<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBgWhite"
    android:id="@+id/relativeLayout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sachet.traveltracker.screens.AdditionalInfo">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextLayout"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/editText"
                android:hint="@string/name"
                android:inputType="text"
                android:gravity="left"
                android:id="@+id/name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_below="@+id/nameWrapper"
            android:layout_height="wrap_content">

            <EditText
                style="@style/editText"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:id="@+id/emailAddress"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobileNumberWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailWrapper"
            >

            <EditText
                style="@style/editText"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:id="@+id/mobileNumber"
                />
        </android.support.design.widget.TextInputLayout>


        <CheckBox
            style="@style/checkBox"
            android:text="@string/are_you_driver"
            android:layout_marginTop="@dimen/small_margin"
            android:id="@+id/driverCheckBox"
            android:layout_below="@+id/mobileNumberWrapper"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/innerLayout"
            android:layout_below="@+id/driverCheckBox"
            >

            <android.support.design.widget.TextInputLayout
            android:id="@+id/drivingLicenceWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
            style="@style/editText"
            android:hint="@string/licence_number"
            android:inputType="text"
            android:maxLength="10"
            android:id="@+id/drivingLicence"
            />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/drivingLicenceWrapper"
                android:layout_marginTop="@dimen/small_margin"
                android:id="@+id/selectGender"
                android:orientation="horizontal">
                <TextView
                    style="@style/flatButton"
                    android:text="@string/gender"
                    android:layout_weight="1"
                    android:gravity="left"
                    />

                <Spinner
                    android:id="@+id/gender"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1"/>
            </LinearLayout>

                <TextView
                    style="@style/flatButton"
                    android:text="@string/selectLocation"
                    android:layout_margin="@dimen/small_margin"
                    android:gravity="right"
                    android:layout_below="@+id/selectGender"
                    android:layout_toRightOf="@+id/pickAddress"
                    android:id="@+id/address"
                    />

                <ImageButton
                    style="@style/imageButton"
                    android:id="@+id/pickAddress"
                    android:background="@drawable/map_icon"
                    android:layout_below="@+id/selectGender"
                    android:layout_marginTop="@dimen/small_margin"
                    />
        </RelativeLayout>

    </RelativeLayout>

    <Button
        style="@style/smallButton"
        android:text="@string/get_started"
        android:layout_weight="1"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:textSize="@dimen/action_button_font_size"
        android:id="@+id/getStarted" />


</RelativeLayout>
