<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.Splash">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>


        <Button
            style="@style/largeButton"
            android:id="@+id/searchDriver"
            android:text="@string/search_driver"
            android:background="@drawable/roundedbutton"
            android:layout_weight="1"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_alignBottom="@id/viewPager"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >

        <Button
            style="@style/smallButton"
            android:text="@string/sign_up"
            android:layout_weight="1"
            android:id="@+id/signUp"/>
        <Button
            style="@style/smallButton"
            android:text="@string/sign_in"
            android:layout_weight="1"
            android:layout_toRightOf="@+id/signUp"
            android:id="@+id/signIn"/>

    </LinearLayout>

</RelativeLayout>
