<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBgWhite"
    android:id="@+id/relativeLayout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sachet.traveltracker.screens.ResetPassword">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextLayout"
        android:layout_marginTop="@dimen/xlarge_margin">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_height="wrap_content">

            <EditText
                style="@style/editText"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:gravity="left"
                android:id="@+id/password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPasswordWrapper"
            android:layout_width="match_parent"
            android:layout_below="@+id/passwordWrapper"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_height="wrap_content">

            <EditText
                style="@style/editText"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:gravity="left"
                android:id="@+id/confirmPassword"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/verificationTextWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPasswordWrapper"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            >

            <EditText
                style="@style/editText"
                android:hint="@string/oneTimePassword"
                android:inputType="number"
                android:maxLength="6"
                android:id="@+id/verificationText"
                />
        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <Button
        style="@style/smallButton"
        android:text="@string/reset"
        android:layout_weight="1"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:textSize="@dimen/action_button_font_size"
        android:id="@+id/resetPassword" />


</RelativeLayout>
