<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBgWhite"
    android:id="@+id/relativeLayout"
    android:paddingBottom="@dimen/small_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/small_margin"
    tools:context=".screens.Login"
    android:clickable="false">

    <!--<ImageButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/backButton"-->
        <!--android:background="@drawable/back_button"/>-->

    <TextView
        style="@style/label"
        android:id="@+id/fillUpDetail"
        />

    <!--<TextView-->
        <!--style="@style/punchLine"-->
        <!--android:layout_below="@+id/fillUpDetail"-->
        <!--android:id="@+id/connectWithUs"-->
        <!--android:text="@string/connect_with_us"-->
        <!--android:layout_alignEnd="@+id/fillUpDetail"-->
        <!--android:layout_alignRight="@+id/fillUpDetail"-->
        <!--/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextLayout"
        android:layout_marginTop="@dimen/xlarge_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobileNumberWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            >

            <EditText
                style="@style/editText"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:id="@+id/mobileNumber"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_below="@+id/mobileNumberWrapper"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_height="wrap_content">

            <EditText
                style="@style/editText"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:gravity="left"
                android:id="@+id/password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPasswordWrapper"
            android:layout_width="match_parent"
            android:layout_below="@+id/passwordWrapper"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_height="wrap_content">

            <EditText
                style="@style/editText"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:gravity="left"
                android:id="@+id/confirmPassword"
                />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>


    <Button
        style="@style/smallButton"
        android:text="@string/sign_up"
        android:layout_weight="1"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:textSize="@dimen/action_button_font_size"
        android:id="@+id/signUp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/dividerLayout"
        android:layout_below="@+id/signUp"
        android:layout_alignEnd="@+id/editTextLayout"
        android:layout_alignRight="@+id/editTextLayout"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        >
        <View style="@style/Divider"
            android:layout_weight="2"
            android:layout_gravity="center" />
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/divider_text"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:id="@+id/dividerText"
            />
        <View style="@style/Divider"
            android:layout_weight="2"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/socialLayout"
        android:layout_below="@+id/dividerLayout"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_margin"
        >
        <ImageButton
            style="@style/imageButton"
            android:id="@+id/googleButton"
            android:background="@drawable/google_plus"
            android:layout_marginRight="@dimen/medium_margin"
            />
        <!--<com.google.android.gms.common.SignInButton-->
            <!--android:id="@+id/googleButton"-->
            <!--android:layout_marginRight="@dimen/activity_vertical_margin_30"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->

        <ImageButton
            style="@style/imageButton"
            android:layout_marginLeft="@dimen/medium_margin"
            android:id="@+id/facebookButton"
            android:background="@drawable/facebook" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <TextView style="@style/label"
            android:id="@+id/alreadyRegistered"
            android:text="@string/already_registered"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="right" />
        <TextView style="@style/flatButton"
            android:id="@+id/signIn"
            android:text="@string/sign_in_caps"
            android:layout_toRightOf="@+id/alreadyRegistered"
            android:layout_weight="3"
            />
    </LinearLayout>

</RelativeLayout>
